@@ -1,21 +1,22 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.40.10.
-.TH AIR-QUALITY-SENSOR "1" "August 2014" "air-quality-sensor (air-quality-sensor) 0.1.1" "User Commands"
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.46.1.
+.TH AIR-QUALITY-SENSOR "1" "September 2014" "air-quality-sensor (air-quality-sensor) 0.1.2" "User Commands"
 .SH NAME
 air-quality-sensor \- User space driver for AppliedSensor's Indoor Air Monitor
 .SH SYNOPSIS
 .B air-quality-sensor
-[\fIOPTION\fR]
+[\fI\,OPTION\/\fR]
 .SH DESCRIPTION
-
 The Indoor Air Monitor is a USB flash drive-shaped sensor which measures
 the surrounding's air pollution. This driver prints a list with all
-connected sensors and their current values to the commandline.
-Brand names and further information has been documented on
-http://wiki.micasaverde.com/ index.php/CO2_Sensor.
-.PP
+connected sensors and their current values to the command-line.  Brand
+names and further information has been documented on
+<http://wiki.micasaverde.com/index.php/CO2_Sensor>.
+
 The air quality is displayed on the hardware token by three indicator
 lamps with the colours green (= good), yellow (= average) and red (=
 bad), the same colors are also printed by this tool.
+.PP
+Read the current air quality from a compatible attached sensor
 .TP
 \fB\-h\fR, \fB\-\-help\fR
 display this help and exit
@@ -23,7 +24,7 @@ display this help and exit
 \fB\-v\fR, \fB\-\-version\fR
 display version information and exit
 .SH "REPORTING BUGS"
-Report bugs to: esperanto@benedikt\-wildenhain.de
+Report bugs on <https://github.com/bwildenhain/air\-quality\-sensor/issues> or send a mail to esperanto@benedikt\-wildenhain.de
 .br
 Home page: <https://github.com/bwildenhain/air\-quality\-sensor>
 .SH COPYRIGHT
