@@ -1,0 +1,10 @@
+[DESCRIPTION]
+The Indoor Air Monitor is a USB flash drive-shaped sensor which measures
+the surrounding's air pollution. This driver prints a list with all
+connected sensors and their current values to the command-line.  Brand
+names and further information has been documented on
+<http://wiki.micasaverde.com/index.php/CO2_Sensor>.
+
+The air quality is displayed on the hardware token by three indicator
+lamps with the colours green (= good), yellow (= average) and red (=
+bad), the same colors are also printed by this tool.
